# MinerBot

./: Lauch file  README.md
Azizbek A 12200311/: Readme.md  lauch file.py
Oybek 12194912/: CMakeLists.txt  README.md
Oybek 12194912/maps/: team4.pgm  team4.yaml  teamB_SLAM.pgm  teamB_SLAM.yaml
Oybek 12194912/nodes/: explore.py
Shahzod/: README.md
Shahzod 12200293/: GITHUB LINK!!!.txt
Shahzod 12200293/src/: gazebo.py  sample.py
Shokhrukh 12194869/: Readme.md  Step 1  Step 2
Shokhzod 12200295/: CHANGELOG.rst  CMakeLists.txt  build.gradle  gradle.properties  local.properties  package.xml  settings.gradle
Shokhzod 12200295/make_a_map/: build.gradle
Shokhzod 12200295/make_a_map/src/main/: AndroidManifest.xml
Shokhzod 12200295/make_a_map/src/main/java/com/github/rosjava/android_apps/make_a_map/: MainActivity.java  MapManager.java  (+1 more)
Shokhzod 12200295/make_a_map/src/main/res/layout/: main.xml  name_map_dialog.xml
Shokhzod 12200295/make_a_map/src/main/res/values/: strings.xml
Shokhzod 12200295/map_nav/: build.gradle
Shokhzod 12200295/map_nav/src/main/: AndroidManifest.xml
Shokhzod 12200295/map_nav/src/main/res/layout/: main.xml
Shokhzod 12200295/map_nav/src/main/res/values/: strings.xml
Shokhzod 12200295/src/main/: AndroidManifest.xml
Shokhzod 12200295/src/main/java/com/github/rosjava/android_apps/map_manager/: MainActivity.java  MapListArrayAdapter.java  MapListData.java  MapManager.java
Shokhzod 12200295/src/main/res/layout/: main.xml  map_list_item.xml  name_map_dialog.xml
Shokhzod 12200295/src/main/res/values/: strings.xml
(+5 files in other folders)
